[tool.poetry]
name = "grafana-backup"
version = "1.4.3"
description = "A Python-based application to backup Grafana settings using the Grafana API"
readme = "README.md"
homepage = "https://github.com/stackitcloud/grafana-backup-tool"
packages = [{include = "grafana_backup"}]

[tool.poetry.dependencies]
python = "^3.10.0"
requests = "2.32.5"
docopt = "0.6.2"
boto3 = "1.40.16"
azure-storage-blob = "12.26.0"
google-cloud-storage = "3.3.0"
influxdb = "5.3.2"
packaging = "25.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.12.12"
pytest = "8.4.2"
pytest-cov = "6.3.0"

[tool.pytest.ini_options]
addopts = "ansibledoctor --cov=ansibledoctor --cov-report=xml:coverage.xml --cov-report=term --no-cov-on-fail"
filterwarnings = [
  "ignore::FutureWarning",
  "ignore::DeprecationWarning",
  "ignore:.*pep8.*:FutureWarning",
]

[tool.coverage.run]
omit = ["**/test/*"]

[tool.ruff]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "test",
  "*.pyc",
  "*.egg-info",
  ".cache",
  ".eggs",
  "env*",
]

line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.poetry.scripts]
grafana-backup = "grafana_backup.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
